--- a/継承と振る舞うことの違い.arb
+++ b/継承と振る舞うことの違い.arb
@@ -2,3 +2,23 @@
 異なる点がある
 
 一般的なオブジェクト指向言語
+
+メッセージを受け取ったオブジェクトのクラスから探索
+クラスになければ、スーパークラスを順番に探索していく
+一回目の探索は対象のメソッドの探索がObjectクラスまで探索される
+二回目の探索はmethod_missingの探索がObjectクラスまで探索される
+
+
+moduleをincludeした場合、
+探索ツリーには乗るが、
+スーパークラスになるわけではない
+
+extendに関しては、
+classに対してした場合、classmethodの追加
+instanceに対してした場合、instancemethodの追加
+となる
+
+
+
+オブジェクトが変数名を使ってどのメッセージをselfに対して送るか分岐している場合　継承を使う
+オブジェクトがメッセージを受け取るオブジェクトのクラスを確認してからどのメッセージを送るか決めている　ダックタイピング
